On branch F2-893-tod Ready to publish new file:   classic-gaming/tunnels/emulation-mame.html new file:   classic-gaming/tunnels/emulation-mister.html modified:   classic-gaming/tunnels/emulation.html modified:   classic-gaming/tunnels/index.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/classic-gaming/tunnels/index.html
+++ b/edburns/classic-gaming/tunnels/index.html
@@ -68,7 +68,7 @@ and fighting Orcs, Imps, and Kobolds. </P>
 
 <TD><IMG WIDTH="25" HEIGHT="50" SRC="images/wizard.jpg"></IMG><TD>
 
-<TD><A HREF="emulation.html">Play ToD on your PC</A></TD>
+<TD><img src="../new.gif"> New Content, 2022-02-13 <A HREF="emulation.html">Play ToD on your MiSTer or PC</A></TD>
 </TR>
 
 <TR>
