On branch master Update with found blog post. modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -591,7 +591,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 <td>October
 </td>
 
-<td><a href="https://www.youtube.com/watch?v=3uHhx-TMV8o">Servlet 4.0: HTTP/2 and Reactive Programming in Java EE 8</a>, <a href="https://www.youtube.com/watch?v=NIQEfai1HPY">Java EE in Practice at Lufthansa Industry Solutions</a>, JSF 2.3 Continued Return on Investment with Incremental Innovation (<a href="https://published-rs.lanyonevents.com/published/oracleus2015/sessionsFiles/3749/BOF3658_Burns-BOF3658_BURNS_JSF.pdf">slides</a>), <a href="https://www.youtube.com/watch?v=WYWG-MewtM8">video: Ed Burns interviews Adrian Treneman from GILT about Microservices</a></td>
+<td><a href="https://www.youtube.com/watch?v=3uHhx-TMV8o">Servlet 4.0: HTTP/2 and Reactive Programming in Java EE 8</a>, <a href="https://www.youtube.com/watch?v=NIQEfai1HPY">Java EE in Practice at Lufthansa Industry Solutions</a> <a href="https://blogs.oracle.com/theaquarium/post/java-ee-in-practice-at-lufthansa-industry-solutions">blog post</a>, JSF 2.3 Continued Return on Investment with Incremental Innovation (<a href="https://published-rs.lanyonevents.com/published/oracleus2015/sessionsFiles/3749/BOF3658_Burns-BOF3658_BURNS_JSF.pdf">slides</a>), <a href="https://www.youtube.com/watch?v=WYWG-MewtM8">video: Ed Burns interviews Adrian Treneman from GILT about Microservices</a></td>
 
 </tr>
 
