--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="2"><span class="verticaltext">2022</span></th>
+  <th rowspan="3"><span class="verticaltext">2022</span></th>
+
+  <td>Berlin JUG</a></td>
+
+  <td>Berlin, Germany</td>
+
+  <td>March</td>
+
+  <td>How Microsoft learned to love Java (<a href="https://youtu.be/qz_9P5nxFT8">Video</a>)</td>
+
+</tr>
+
+<tr>
 
   <td>JavaLand</a></td>
 
@@ -39,9 +51,11 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>March</td>
 
-  <td>Low Cost, Cloud Native, Open Standard Java on Azure Kubernetes Service, Modern Jakarta EE and Microprofile on Azure: Open Liberty, JBoss EAP, and WebLogic, <a href="https://www.javaland.eu/en/home/news/news/?tx_news_pi1%5Bnews%5D=2483&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Baction%5D=detail&cHash=955b6fd7d1749e908294e90151e35c20">Pre-conference interview</a></td>
+  <td>Low Cost, Cloud Native, Open Standard Java on Azure Kubernetes Service, Modern Jakarta EE and Microprofile on Azure: Open Liberty, JBoss EAP, and WebLogic (<a href="https://www.javaland.eu/en/home/news/news/?tx_news_pi1%5Bnews%5D=2483&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Baction%5D=detail&cHash=955b6fd7d1749e908294e90151e35c20">Pre-conference interview</a>, <a href="https://shop.doag.org/javaland/2022/agenda/#textSearch.low%20cost">Video</a>, <a href="https://shop.doag.org/download.9d5f0060620be5b0069a8eb0c308ad8e_1/">Slides</a>)</td>
 
 </tr>
+
+
 
 <tr>
 
