--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -39,7 +39,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>March</td>
 
-  <td>How Microsoft learned to love Java (<a href="https://youtu.be/qz_9P5nxFT8">Video</a>)</td>
+  <td>How Microsoft learned to love Java (<a href="https://www.youtube.com/watch?v=qz_9P5nxFT8&t=4345s">Video</a>)</td>
 
 </tr>
 
