On branch master Add JDCONF modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="3"><span class="verticaltext">2022</span></th>
+  <th rowspan="4"><span class="verticaltext">2022</span></th>
+
+  <td>JDConf</a></td>
+
+  <td>Virtual</td>
+
+  <td>May</td>
+
+  <td>Oracle WebLogic Server on Azure Kubernetes Service (<a href="https://docs.microsoft.com/en-us/events/jdconf-2022/oracle-weblogic-server-on-azure-kubernetes-service">video</a>)</td>
+
+</tr>
+
+<tr>
 
   <td>Berlin JUG</a></td>
 
