On branch master Add JavaLand 2022 follow ups. modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="4"><span class="verticaltext">2022</span></th>
+  <th rowspan="8><span class="verticaltext">2022</span></th>
 
   <td>JDConf</a></td>
 
@@ -45,13 +45,63 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <td>Berlin JUG</a></td>
+  <td>Global Azure Austria</a></td>
+
+  <td>Virtual</td>
+
+  <td>May</td>
+
+  <td>Learn over Lunch: Ed Burns about Java on Azure (<a href="https://globalazure.at/sessions/">session catalog</a>)</td>
+
+</tr>
+
+
+
+<tr>
+
+  <td>Enterprise Java User Group Austria</a></td>
+
+  <td>Linz, Austria</td>
+
+  <td>March</td>
+
+  <td>Java EE on Azure & Azure Spring Cloud (<a href="https://www.meetup.com/Enterprise-Java-User-Group-Austria/events/284484218/">meetup</a>)</td>
+
+</tr>
+
+<tr>
+
+  <td>Java Vienna</a></td>
+
+  <td>Vienna, Austria</td>
+
+  <td>March</td>
+
+  <td>JakartaEE @ Azure (<a href="https://www.meetup.com/Java-Vienna/events/284091597/">meetup</a>)</td>
+
+</tr>
+
+<tr>
+
+  <td>JUG N&uuml;remberg</a></td>
+
+  <td>N&uuml;remberg, Germany</td>
+
+  <td>March</td>
+
+  <td>Jakarta EE und Microprofile sind bei Azure zu Hause (<a href="https://www.meetup.com/JUG-Nurnberg/events/284698179/">meetup</a>)</td>
+
+</tr>
+
+<tr>
+
+  <td>JUG Berlin-Brandenburg</a></td>
 
   <td>Berlin, Germany</td>
 
   <td>March</td>
 
-  <td>How Microsoft learned to love Java (<a href="https://www.youtube.com/watch?v=qz_9P5nxFT8&t=4345s">Video</a>)</td>
+  <td>How Microsoft learned to love Java (<a href="https://www.youtube.com/watch?v=qz_9P5nxFT8&t=4345s">Video</a>, <a href="https://www.meetup.com/de-DE/Docker-Berlin/events/284610189/">meetup</a>, <a href="https://www.meetup.com/jug-bb/events/284705200/">meetup</a>)</td>
 
 </tr>
 
