On branch master Added presentation from over twenty years ago. modified:   edburns/speaking-engagements.html edburns/content/20020518-jsf-borcon-01.pdf edburns/content/20020518-jsf-borcon-02.pdf edburns/content/20020518-jsf-borcon-03.pdf
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -1725,8 +1725,25 @@ Session: Intro to JSF
 
 <tr>
 
-<th rowspan="1"><span class="verticaltext">2002</span></th>
+<th rowspan="2"><span class="verticaltext">2002</span></th>
 
+
+<td>Borcon
+</td>
+
+<td>Anaheim, U.S.A.
+</td>
+
+<td>May
+</td>
+
+<td>
+Session: Intro to JSF (<a href="../content/20020518-jsf-borcon-01.pdf">PDF 1</a>, <a href="../content/20020518-jsf-borcon-02.pdf">PDF 2</a>, <a href="../content/20020518-jsf-borcon-03.pdf">PDF 3</a>)
+</td>
+
+</tr>
+
+<tr>
 
 <td>JavaOne
 </td>
@@ -1772,7 +1789,7 @@ Session: Intro to JSF
     <address><a href="mailto:edburns@@acm.org"></a></address>
 <!-- Created: Mon Aug 22 09:32:52 Eastern Daylight Time 2005 -->
 <!-- hhmts start -->
-Last modified: 15 February 2022
+Last modified: 05 July 2022
 <!-- hhmts end -->
   </body>
 </html>
