On branch master Added missing step. modified:   edburns/classic-gaming/tunnels/emulation-mister.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/classic-gaming/tunnels/emulation-mister.html
+++ b/edburns/classic-gaming/tunnels/emulation-mister.html
@@ -466,6 +466,8 @@
 
             <li><p>Because you have connected the Ethernet cable, your MiSTer is now connected to the Internet.</p></li>
 
+           <li><p>Use the arrow keys to highlight <b>update_all.sh</b> and press Enter.</p></li>
+
             <li><p>Accept the defaults and allow the script to run. It will take a long time, even with a fast Internet connection.  The script should be able to run unattended.</p></li>
 
             <li><p>When the script completes running you will be taken back to the MiSTer menu. This menu times out so if you come back to the TV and find only static, press F12 to bring back the menu.</p></li>
