On branch master https://edburns.atlassian.net/browse/F2-950 details summary modified:   edburns/classic-gaming/tunnels/emulation-mister.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/classic-gaming/tunnels/emulation-mister.html
+++ b/edburns/classic-gaming/tunnels/emulation-mister.html
@@ -51,9 +51,9 @@
     </li>
   </ol>
   <p>Let's dive in!</p>
-  <h3 id="zero-to-before-16">1. One time setup: Going from
-      zero to being ready to see the 16 color boot screen of the
-      TI-99/4a.</h3>
+  <h3 id="zero-to-before-16">1. One time setup: Going from zero to being ready to see the 16 color boot screen of the TI-99/4a.</h3>
+  <details>
+  <summary></summary>
   <ol>
     <li>
       <p>Set expectations</p>
@@ -559,10 +559,14 @@
   </ol>
 
   <p>You have completed the one time set up and are ready to play Tunnels of Doom on your MiSTer.</p>
+  </details>
 
   <h3 id="16-to-equipping">2. Going from the 16 color boot screen
-  to equipping your party.</h3>
+      to equipping your party.</h3>
 
+  <details>
+  <summary>
+  </summary>
   <ol>
 
    <li><p>Ensure the connections are made as described in the
@@ -659,11 +663,14 @@
    </p></li>
 
   </ol>
-
+  </details>
 
   <h3 id="saving-and-restoring">3. Going from 16 color boot screen
-  to restoring and resuming.</h3>
+      to restoring and resuming.</h3>
 
+  <details>
+  <summary>
+  </summary>
  <ol>
 
    <li><p>Do the first 15 steps of the preceding section.  Note: if you had already inserted the cartridge and disk, you don't need to do those steps again.</p></li>
@@ -680,6 +687,9 @@
 
 
  </ol>
+
+  </details>
+
 [ <a href="index.html">home</a> ]<br>
   <hr>
   <address>
@@ -687,7 +697,7 @@
   </address>
   <!-- Created: Mon Jan 14 12:12:37 Pacific Standard Time 2002 -->
   <!-- hhmts start -->
-  Last modified: Sun Feb 13 11:11:20 Eastern Daylight Time 2022 
+  Last modified: Sat Jul 16 11:11:20 Eastern Daylight Time 2022 
   <!-- hhmts end -->
 </body>
 </html>
