On branch master https://dev.azure.com/edburns-msft/Ed%20Burns%20Personal/_workitems/edit/1887 modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="8><span class="verticaltext">2022</span></th>
+  <th rowspan="9"><span class="verticaltext">2022</span></th>
+
+  <td>CloudLand</a></td>
+
+  <td>Br&uuml;hl, Germany</td>
+
+  <td>Late June, early July</td>
+
+  <td>Wie Azure Jakarta EE Nutzt (<a href="https://shop.doag.org/events/cloudland/2022/agenda/#eventDay.all#textSearch.burns">Video</a>, <a href="https://aka.ms/2022/cloudland/jakartaee">Slides</a>), Practical lessons from customers performing digital transformation with Azure (<a href="https://aka.ms/2022/cloudland/practical">Slides</a>)</td>
+
+</tr>
+
+<tr>
 
   <td>JDConf</a></td>
 
