--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -39,7 +39,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>Late June, early July</td>
 
-  <td>Wie Azure Jakarta EE Nutzt (<a href="https://shop.doag.org/events/cloudland/2022/agenda/#eventDay.all#textSearch.burns">Video</a>, <a href="https://aka.ms/2022/cloudland/jakartaee">Slides</a>), Practical lessons from customers performing digital transformation with Azure (<a href="https://aka.ms/2022/cloudland/practical">Slides</a>)</td>
+  <td>Wie Azure Jakarta EE Nutzt (<a href="https://youtu.be/iMACmfoegHI">Video</a>, <a href="https://aka.ms/2022/cloudland/jakartaee">Slides</a>), Practical lessons from customers performing digital transformation with Azure (<a href="https://aka.ms/2022/cloudland/practical">Slides</a>)</td>
 
 </tr>
 
