On branch master Fix location of binaries. modified: edburns/classic-gaming/tunnels/emulation-mister.html modified: edburns/classic-gaming/tunnels/images/index.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/classic-gaming/tunnels/emulation-mister.html
+++ b/edburns/classic-gaming/tunnels/emulation-mister.html
@@ -516,7 +516,7 @@
             <li><p>Connect the external hard drive to a PC.
             </p></li>
 
-            <li><p>Download <a href="bin/ti99tod.zip">this zip file</a> to
+            <li><p>Download <a href="https://github.com/edburns/edburns.github.io/raw/master/edburns/classic-gaming/tunnels/bin/ti99tod.zip">this zip file</a> to
             the root directory of the external hard drive.</p></li>
 
             <li><p>Extract the entire zip file to the root directory
