--- a/edburns/classic-gaming/tunnels/images/index.html
+++ b/edburns/classic-gaming/tunnels/images/index.html
@@ -23,16 +23,16 @@
 
 <table border="0">
 
-<tr>
+    <tr>
 
-<td>User Manual in PDF form <a href="TODManual.pdf">TODManual.pdf (8,088,713k)</a>
+        <td>User Manual in PDF form <a href="https://github.com/edburns/edburns.github.io/raw/master/edburns/classic-gaming/tunnels/images/TODManual.pdf">TODManual.pdf (8,088,713k)</a>
 </td>
 
 </tr>
 
 <tr>
 
-<td>User Manual in PDF form, Full Resolution <a href="TODManualFULLRESOLUTION.pdf">TODManualFULLRESOLUTION.pdf (12,436,246k)</a>
+    <td>User Manual in PDF form, Full Resolution <a href="https://github.com/edburns/edburns.github.io/raw/master/edburns/classic-gaming/tunnels/images/TODManualFULLRESOLUTION.pdf">TODManualFULLRESOLUTION.pdf (12,436,246k)</a>
 </td>
 
 </tr>
