On branch master Copyediting modified:   edburns/classic-gaming/tunnels/emulation-mister.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/classic-gaming/tunnels/emulation-mister.html
+++ b/edburns/classic-gaming/tunnels/emulation-mister.html
@@ -67,7 +67,7 @@
           <p>You must be prepared for a lot of hassle.</p>
         </li>
         <li>
-          <p>It is a living and dynamic hobby. Things that work at
+          <p>It is a living and dynamic hobby. Things that worked at
           one point can stop working and you’ll have to tinker and
           debug.</p>
         </li>
@@ -86,7 +86,7 @@
         <li style="list-style: none; display: inline">
           <ul>
             <li>
-              <p>“We used to do it that way, but we no one does it
+              <p>“We used to do it that way, but no one does it
               that way now because so-and-so uploaded a new core
               and this new way is better.”</p>
             </li>
@@ -96,7 +96,7 @@
             </li>
             <li>
               <p>The information is flat out wrong, but because
-              there is no quality control, such mistakes are not
+              there is no quality control, such mistakes are seldom, if ever,
               corrected.</p>
             </li>
           </ul>
